---
source: crates/utils/src/wasm_tools.rs
expression: exports
---
{
  "testing:http-workflow/workflow.get": {
    "ffqn": "testing:http-workflow/workflow.get",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "string",
          "err": "string"
        },
        "wit_type": "result<string, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:http-workflow/workflow.get-resp": {
    "ffqn": "testing:http-workflow/workflow.get-resp",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "string",
          "err": "string"
        },
        "wit_type": "result<string, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:http-workflow/workflow.get-successful": {
    "ffqn": "testing:http-workflow/workflow.get-successful",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "string",
          "err": "string"
        },
        "wit_type": "result<string, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:http-workflow/workflow.get-successful-concurrently": {
    "ffqn": "testing:http-workflow/workflow.get-successful-concurrently",
    "parameter_types": [
      {
        "type_wrapper": "list<string>",
        "name": "urls",
        "wit_type": "list<string>"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "list<string>",
          "err": "string"
        },
        "wit_type": "result<list<string>, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:http-workflow/workflow.get-successful-concurrently-stress": {
    "ffqn": "testing:http-workflow/workflow.get-successful-concurrently-stress",
    "parameter_types": [
      {
        "type_wrapper": "string",
        "name": "url",
        "wit_type": "string"
      },
      {
        "type_wrapper": "u32",
        "name": "concurrency",
        "wit_type": "u32"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "list<string>",
          "err": "string"
        },
        "wit_type": "result<list<string>, string>"
      }
    },
    "extension": null,
    "submittable": true
  }
}
